Updated/re-added vignettes -- initial commit of vignette suit.

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -110,20 +110,23 @@ doi = {10.1111/biom.12242}
 }
 
 
-  @Manual{RBesT20,
-    title = {RBesT: R Bayesian Evidence Synthesis Tools},
-    author = {Sebastian Weber},
-    year = {2020},
-    note = {R package version 1.6-1},
-    url = {https://CRAN.R-project.org/package=RBesT},
+  @Article{RBesT20,
+    title = {Applying Meta-Analytic-Predictive Priors with the {R} {B}ayesian Evidence Synthesis Tools},
+    author = {Sebastian Weber and Yue Li and John W. Seaman and Tomoyuki Kakizume and Heinz Schmidli},
+    journal = {Journal of Statistical Software},
+    year = {2021},
+    volume = {100},
+    number = {19},
+    pages = {1--32},
+    doi = {10.18637/jss.v100.i19},
   }
 
-   @Misc{rstan20,
+  @Misc{rstan20,
     title = {{RStan}: the {R} interface to {Stan}},
     author = {{Stan Development Team}},
-    note = {R package version 2.21.2},
-    year = {2020},
-    url = {http://mc-stan.org/},
+    note = {R package version 2.21.5},
+    year = {2022},
+    url = {https://mc-stan.org/},
   }
 
    @Manual{oncobayes2,
