--- a/vignettes/parallelization_jointBLRM.Rmd
+++ b/vignettes/parallelization_jointBLRM.Rmd
@@ -92,17 +92,17 @@ print(sim_result, quote = F)
 #> Percentage not all too toxic                                                                            
 #> 
 #> $`summary combi.a`
-#>                     Median      Mean Min.      Max.       2.5%     97.5%
-#> #Pat underdose   0.0000000 0.0000000    0 0.0000000 0.00000000 0.0000000
-#> #Pat target dose 3.0000000 3.0000000    3 3.0000000 3.00000000 3.0000000
-#> #Pat overdose    0.0000000 0.0000000    0 0.0000000 0.00000000 0.0000000
-#> #Pat (all)       3.0000000 3.0000000    3 3.0000000 3.00000000 3.0000000
-#> #DLT underdose   0.0000000 0.0000000    0 0.0000000 0.00000000 0.0000000
-#> #DLT target dose 1.0000000 0.6666667    0 1.0000000 0.05000000 1.0000000
-#> #DLT overdose    0.0000000 0.0000000    0 0.0000000 0.00000000 0.0000000
-#> #DLT (all)       1.0000000 0.6666667    0 1.0000000 0.05000000 1.0000000
-#> % overdose       0.0000000 0.0000000    0 0.0000000 0.00000000 0.0000000
-#> % DLT            0.3333333 0.2222222    0 0.3333333 0.01666667 0.3333333
+#>                     Median      Mean      Min.      Max.  2.5%     97.5%
+#> #Pat underdose   0.0000000 0.0000000 0.0000000 0.0000000 0.000 0.0000000
+#> #Pat target dose 6.0000000 6.0000000 3.0000000 9.0000000 3.150 8.8500000
+#> #Pat overdose    0.0000000 0.0000000 0.0000000 0.0000000 0.000 0.0000000
+#> #Pat (all)       6.0000000 6.0000000 3.0000000 9.0000000 3.150 8.8500000
+#> #DLT underdose   0.0000000 0.0000000 0.0000000 0.0000000 0.000 0.0000000
+#> #DLT target dose 1.0000000 1.6666667 1.0000000 3.0000000 1.000 2.9000000
+#> #DLT overdose    0.0000000 0.0000000 0.0000000 0.0000000 0.000 0.0000000
+#> #DLT (all)       1.0000000 1.6666667 1.0000000 3.0000000 1.000 2.9000000
+#> % overdose       0.0000000 0.0000000 0.0000000 0.0000000 0.000 0.0000000
+#> % DLT            0.3333333 0.2777778 0.1666667 0.3333333 0.175 0.3333333
 #> 
 #> $`MTDs combi.a`
 #>                  2+1         4+1      8+1      2+2      4+2      8+2     
@@ -114,27 +114,35 @@ print(sim_result, quote = F)
 #> $`#pat. combi.a`
 #>             2+1 4+1 8+1 2+2 4+2 8+2
 #> Dose        2+1 4+1 8+1 2+2 4+2 8+2
-#> mean #pat   3   0   0   0   0   0  
-#> median #pat 3   0   0   0   0   0  
+#> mean #pat   6   0   0   0   0   0  
+#> median #pat 6   0   0   0   0   0  
 #> min #pat    3   0   0   0   0   0  
-#> max #pat    3   0   0   0   0   0  
+#> max #pat    9   0   0   0   0   0  
+#> 
+#> $`#DLT combi.a`
+#>             2+1              4+1 8+1 2+2 4+2 8+2
+#> Dose        2+1              4+1 8+1 2+2 4+2 8+2
+#> mean #DLT   1.66666666666667 0   0   0   0   0  
+#> median #DLT 1                0   0   0   0   0  
+#> min #DLT    1                0   0   0   0   0  
+#> max #DLT    3                0   0   0   0   0  
 #> 
 #> $`results mono1.a`
 #>                              underdose target dose overdose max n reached before MTD all doses too toxic
-#> Number of trials                     0     1.00000        0                        0             2.00000
-#> Percentage                           0    33.33333        0                        0            66.66667
-#> Percentage not all too toxic         0   100.00000        0                        0                  NA
+#> Number of trials                     0           0        0                  1.00000             2.00000
+#> Percentage                           0           0        0                 33.33333            66.66667
+#> Percentage not all too toxic         0           0        0                100.00000                  NA
 #> 
 #> $`summary mono1.a`
 #>                     Median      Mean      Min.       Max.  2.5% 97.5%
 #> #Pat underdose   0.0000000 0.0000000 0.0000000  0.0000000 0.000  0.00
-#> #Pat target dose 9.0000000 8.0000000 3.0000000 12.0000000 3.300 11.85
+#> #Pat target dose 3.0000000 6.0000000 3.0000000 12.0000000 3.000 11.55
 #> #Pat overdose    0.0000000 0.0000000 0.0000000  0.0000000 0.000  0.00
-#> #Pat (all)       9.0000000 8.0000000 3.0000000 12.0000000 3.300 11.85
+#> #Pat (all)       3.0000000 6.0000000 3.0000000 12.0000000 3.000 11.55
 #> #DLT underdose   0.0000000 0.0000000 0.0000000  0.0000000 0.000  0.00
-#> #DLT target dose 2.0000000 2.3333333 2.0000000  3.0000000 2.000  2.95
+#> #DLT target dose 2.0000000 1.6666667 1.0000000  2.0000000 1.050  2.00
 #> #DLT overdose    0.0000000 0.0000000 0.0000000  0.0000000 0.000  0.00
-#> #DLT (all)       2.0000000 2.3333333 2.0000000  3.0000000 2.000  2.95
+#> #DLT (all)       2.0000000 1.6666667 1.0000000  2.0000000 1.050  2.00
 #> % overdose       0.0000000 0.0000000 0.0000000  0.0000000 0.000  0.00
 #> % DLT            0.3333333 0.3888889 0.1666667  0.6666667 0.175  0.65
 #> 
@@ -143,15 +151,23 @@ print(sim_result, quote = F)
 #> Dose             2           4           8       
 #> True P(DLT)      0.2         0.3         0.5     
 #> True category    target dose target dose overdose
-#> MTD declared (n) 0           1           0       
+#> MTD declared (n) 0           0           0       
 #> 
 #> $`#pat. mono1.a`
 #>             2 4 8
 #> Dose        2 4 8
-#> mean #pat   4 4 0
-#> median #pat 3 3 0
+#> mean #pat   4 2 0
+#> median #pat 3 0 0
 #> min #pat    3 0 0
-#> max #pat    6 9 0
+#> max #pat    6 6 0
+#> 
+#> $`#DLT mono1.a`
+#>             2 4                 8
+#> Dose        2 4                 8
+#> mean #DLT   1 0.666666666666667 0
+#> median #DLT 1 0                 0
+#> min #DLT    0 0                 0
+#> max #DLT    2 2                 0
 #> 
 #> $prior
 #>               mean       SD
@@ -167,51 +183,51 @@ print(sim_result, quote = F)
 #> tau_eta -2.0794415 0.707293
 #> 
 #> $specifications
-#>                                  Value      -   
-#> seed                             1056427552 -   
-#> dosing.intervals                 0.16       0.33
-#> esc.rule                         ewoc       -   
-#> esc.comp.max                     1          -   
-#> dose.ref1                        8          -   
-#> dose.ref2                        2          -   
-#> saturating                       FALSE      -   
-#> ewoc.threshold                   0.25       -   
-#> start.dose.mono1.a               2          -   
-#> esc.step.mono1.a                 2          -   
-#> esc.constrain.mono1.a            FALSE      -   
-#> max.n.mono1.a                    12         -   
-#> cohort.size.mono1.a              3          -   
-#> cohort.prob.mono1.a              1          -   
-#> mtd.decision.mono1.a$target.prob 0.5        -   
-#> mtd.decision.mono1.a$pat.at.mtd  6          -   
-#> mtd.decision.mono1.a$min.pat     12         -   
-#> mtd.decision.mono1.a$min.dlt     1          -   
-#> mtd.decision.mono1.a$rule        2          -   
-#> mtd.enforce.mono1.a              FALSE      -   
-#> backfill.mono1.a                 FALSE      -   
-#> backfill.size.mono1.a            3          -   
-#> backfill.prob.mono1.a            1          -   
-#> backfill.start.mono1.a           2          -   
-#> start.dose.combi.a1              2          -   
-#> start.dose.combi.a2              1          -   
-#> esc.step.combi.a1                2          -   
-#> esc.step.combi.a2                2          -   
-#> esc.constrain.combi.a1           FALSE      -   
-#> esc.constrain.combi.a2           FALSE      -   
-#> max.n.combi.a                    24         -   
-#> cohort.size.combi.a              3          -   
-#> cohort.prob.combi.a              1          -   
-#> mtd.decision.combi.a$target.prob 0.5        -   
-#> mtd.decision.combi.a$pat.at.mtd  6          -   
-#> mtd.decision.combi.a$min.pat     12         -   
-#> mtd.decision.combi.a$min.dlt     1          -   
-#> mtd.decision.combi.a$rule        2          -   
-#> mtd.enforce.combi.a              FALSE      -   
-#> backfill.combi.a                 FALSE      -   
-#> backfill.size.combi.a            3          -   
-#> backfill.prob.combi.a            1          -   
-#> backfill.start.combi.a1          2          -   
-#> backfill.start.combi.a2          1          -   
+#>                                  Value     -   
+#> seed                             965844282 -   
+#> dosing.intervals                 0.16      0.33
+#> esc.rule                         ewoc      -   
+#> esc.comp.max                     1         -   
+#> dose.ref1                        8         -   
+#> dose.ref2                        2         -   
+#> saturating                       FALSE     -   
+#> ewoc.threshold                   0.25      -   
+#> start.dose.mono1.a               2         -   
+#> esc.step.mono1.a                 2         -   
+#> esc.constrain.mono1.a            FALSE     -   
+#> max.n.mono1.a                    12        -   
+#> cohort.size.mono1.a              3         -   
+#> cohort.prob.mono1.a              1         -   
+#> mtd.decision.mono1.a$target.prob 0.5       -   
+#> mtd.decision.mono1.a$pat.at.mtd  6         -   
+#> mtd.decision.mono1.a$min.pat     12        -   
+#> mtd.decision.mono1.a$min.dlt     1         -   
+#> mtd.decision.mono1.a$rule        2         -   
+#> mtd.enforce.mono1.a              FALSE     -   
+#> backfill.mono1.a                 FALSE     -   
+#> backfill.size.mono1.a            3         -   
+#> backfill.prob.mono1.a            1         -   
+#> backfill.start.mono1.a           2         -   
+#> start.dose.combi.a1              2         -   
+#> start.dose.combi.a2              1         -   
+#> esc.step.combi.a1                2         -   
+#> esc.step.combi.a2                2         -   
+#> esc.constrain.combi.a1           FALSE     -   
+#> esc.constrain.combi.a2           FALSE     -   
+#> max.n.combi.a                    24        -   
+#> cohort.size.combi.a              3         -   
+#> cohort.prob.combi.a              1         -   
+#> mtd.decision.combi.a$target.prob 0.5       -   
+#> mtd.decision.combi.a$pat.at.mtd  6         -   
+#> mtd.decision.combi.a$min.pat     12        -   
+#> mtd.decision.combi.a$min.dlt     1         -   
+#> mtd.decision.combi.a$rule        2         -   
+#> mtd.enforce.combi.a              FALSE     -   
+#> backfill.combi.a                 FALSE     -   
+#> backfill.size.combi.a            3         -   
+#> backfill.prob.combi.a            1         -   
+#> backfill.start.combi.a1          2         -   
+#> backfill.start.combi.a2          1         -   
 #> 
 #> $`Stan options`
 #>                 Value
@@ -228,40 +244,37 @@ to speed up simulations further when parallelizing on a moderate number of cores
 (e.g., when one is not using a cluster). For details, refer to the argument
 `working.path` of the function `sim_jointBLRM()`.
 
-## Advanced: parallelization on a cluster
+## Parallelization on a cluster
 All of the functions of the `decider` package that allow for parallelization
 feature a nested `foreach` loop with two stages. With this, is is possible to
 leverage the capabilities of multiple cluster nodes
 that each have multiple cores. Usually, simulations of joint BLRM trials with
-multiple arms will take a very long run time (in the order of hours) when
+multiple arms will take a relatively long run time (up to the order of hours) when
 executed on a regular computer with a moderate amount of cores, so running
 simulations on a cluster may be desirable to achieve manageable runtimes.
 Please note that function `sim_jointBLRM` parallelizes across trials, so, when simulating
 e.g. 1000 trials, multiple hundreds cores can be used to substantially
-improve the run time. 
+improve the run time.
 
-In the following, it is illustrated how a parallel backend
-on a SLURM cluster could be registered. We will use the `future.batchtools` package for this:
+In the following, it is illustrated how an exemplary parallel backend
+on a common SLURM cluster could be registered. We will use the `future.batchtools` package for this:
 
 ```r
 library(future.batchtools)
+#> Warning: package 'future.batchtools' was built under R version 4.1.3
+#> Loading required package: parallelly
+#> Warning: package 'parallelly' was built under R version 4.1.3
 ```
 
 Let us assume we have a cluster available where we want to request 10 nodes with
-32 cores per node (320 cores in total). We specify this in the following arguments:
+32 cores per node (320 cores in total). We specify this and further ressources
+like the job time and memory requested in the following arguments:
 
 ```r
 #number of processor nodes
 n_nodes <- 10
 #number of cores per node
 n_cpus  <- 32
-```
-
-To register the parallel backend, we will use a simple SLURM template from the `future.batchtools`
-package. As this allows to specify a requested walltime and memory, we enter some standard
-numbers that usually work well for the functions of the `decider` package:
-
-```r
 #job time in hours
 walltime_h <- 2
 #memory requested in GB
@@ -284,7 +297,7 @@ registerDoFuture()
 plan(list(slurm, multisession))
 ```
 
-With this specification, when `sim_jointBLRM()` is called, the trials that need
+With this specification, when e.g. `sim_jointBLRM()` is called, the trials that need
 to be simulated will first be divided evenly across the available nodes, and the
 trials to be simulated by each node will be distributed across the CPUs the
 node has. In the above example, when we simulate e.g. 6400 trials using 20 nodes
@@ -298,15 +311,10 @@ Please note that there are some tradeoffs involed depending on the system, e.g.
 requesting a very large number of cores may take more time.
 
 At last, please note that the function `sim_jointBLRM()` also supports the use
-of a `working.path` which allows to enable saving and reloading of MCMC results.
+of a `working.path` argument which allows to enable saving and reloading of MCMC results.
 If this is executed on a parallel backend, please note that the path must be
-somewhere in the shared memory, where all CPUs have access. In general, this
-option is mostly designed for use on local computers with only a small number of
-cores and a single node. While the strategy of saving and reloading also works
-on hundreds of cores (as it synchronizes communication across nodes/cores
-via the `flock` package), there may be some overhead introduced
-when multiple cores need to read the same MCMC result. The strategy will still
-work without causing issues (e.g., deadlocks), but, with sufficiently many cores, it should
-not be necessary to reload MCMC results as the overhead might outweigh the
-benefits beyond a certain point.
+somewhere in the shared memory, where all CPUs have access. Synchronization across
+CPUs is carried out using file locks, which may introduce some overhead. It was observed
+that this feature can potentially still provide significant benefits to the runtime (both on a
+cluster and on a standard computer), but please be aware that this is **highly experimental**.
 
